Name:             ordered-list
Version:          0.2
Synopsis:         Ordered list type with efficient and streaming observation in two directions.
Description:      Ordered list type with efficient and streaming observation in two directions.

Category:         Control, Data
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       code@typlab.com
Copyright:        (c) 2011, typLAB
Build-Type:       Simple
Cabal-Version:    >= 1.6
Homepage:         http://github.com/typLAB/ordered-list

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.*
                  , mtl >= 1.1 && < 2.1
                  , arrow-list >=0.4 && < 0.6
                  , containers >=0.3 && < 0.5
                  , regular-extras ==0.2.*
                  , regular ==0.3.*
                  , deepseq ==1.1.*

  Exposed-modules:  Control.Arrow.List.Ordered
                    Data.List.Ordered

