name:                ordered-list
version:             0.4.4.6
synopsis:            Ordered list type with efficient and streaming observation in two directions.
description:         Ordered list type with efficient and streaming observation in two directions.
category:            Control, Data
license:             BSD3
license-file:        LICENSE
author:              Sebastiaan Visser
maintainer:          code@silk.co
copyright:           (c) 2011, Silk
build-type:          Simple
cabal-version:       >= 1.6
homepage:            http://github.com/silkapp/ordered-list

extra-source-files:
  LICENSE
  CHANGELOG.md
  README.md

source-repository head
  type:              git
  location:          https://github.com/silkapp/ordered-list.git

library
  ghc-options:      -Wall
  hs-source-dirs:   src
  exposed-modules:
    Control.Arrow.List.Ordered
    Data.List.Ordered
  build-depends:
      base >= 4.6 && < 5
    , arrow-list == 0.7.*
    , containers >= 0.3 && < 0.6
    , mtl >= 1.1 && < 2.3
